test/error/ArrayStgStringLength.fu
public class Test
{
	int["foo"] Array; //ERROR: Cannot convert 'string' to 'int'
}
